--- a/styles.css
+++ b/styles.css
@@ -12,114 +12,114 @@
     text-align: center;
 }
 
-.armin-1 {
+#armin-1 {
     /* TO DO  */
 }
 
-.armin-2 {
+#armin-2 {
     /* TO DO  */
 }
 
-.ursina-1 {
+#ursina-1 {
     /* TO DO  */
 }
 
-.ursina-2 {
+#ursina-2 {
     /* TO DO  */
 }
 
-.boris-1 {
+#boris-1 {
     /* TO DO  */
 }
 
-.boris-2 {
+#boris-2 {
     /* TO DO  */
 }
 
-.vanessa-1 {
+#vanessa-1 {
     /* TO DO  */
 }
 
-.vanessa-2 {
+#vanessa-2 {
     /* TO DO  */
 }
 
-.manuel-1 {
+#manuel-1 {
     /* TO DO  */
 }
 
-.manuel-2 {
+#manuel-2 {
     /* TO DO  */
 }
 
-.seraina-1 {
+#seraina-1 {
     /* TO DO  */
 }
 
-.seraina-2 {
+#seraina-2 {
     /* TO DO  */
 }
 
-.nicole-1 {
+#nicole-1 {
     /* TO DO  */
 }
 
-.nicole-2 {
+#nicole-2 {
     /* TO DO  */
 }
 
-.tina-1 {
+#tina-1 {
     /* TO DO  */
 }
 
-.tina-2 {
+#tina-2 {
     /* TO DO  */
 }
 
-.evelyn-1 {
+#evelyn-1 {
     /* TO DO  */
 }
 
-.evelyn-2 {
+#evelyn-2 {
     /* TO DO  */
 }
 
-.josephine-1 {
+#josephine-1 {
     /* TO DO  */
 }
 
-.josephine-2 {
+#josephine-2 {
     /* TO DO  */
 }
 
-.leonard-1 {
+#leonard-1 {
     /* TO DO  */
 }
 
-.leonard-2 {
+#leonard-2 {
     /* TO DO  */
 }
 
-.andrin-1 {
+#andrin-1 {
     /* TO DO  */
 }
 
-.andrin-2 {
+#andrin-2 {
     /* TO DO  */
 }
 
-.carmen-1 {
+#carmen-1 {
     /* TO DO  */
 }
 
-.carmen-2 {
+#carmen-2 {
     /* TO DO  */
 }
 
-.stefanie-1 {
+#stefanie-1 {
     /* TO DO  */
 }
 
-.stefanie-2 {
+#stefanie-2 {
     /* TO DO  */
 }
