--- a/styles.css
+++ b/styles.css
@@ -12,114 +12,11 @@
     text-align: center;
 }
 
-#armin-1 {
+#name-1 {
     /* TO DO  */
 }
 
-#armin-2 {
+#name-2 {
     /* TO DO  */
 }
 
-#ursina-1 {
-    /* TO DO  */
-}
-
-#ursina-2 {
-    /* TO DO  */
-}
-
-#boris-1 {
-    /* TO DO  */
-}
-
-#boris-2 {
-    /* TO DO  */
-}
-
-#vanessa-1 {
-    /* TO DO  */
-}
-
-#vanessa-2 {
-    /* TO DO  */
-}
-
-#manuel-1 {
-    /* TO DO  */
-}
-
-#manuel-2 {
-    /* TO DO  */
-}
-
-#seraina-1 {
-    /* TO DO  */
-}
-
-#seraina-2 {
-    /* TO DO  */
-}
-
-#nicole-1 {
-    /* TO DO  */
-}
-
-#nicole-2 {
-    /* TO DO  */
-}
-
-#tina-1 {
-    /* TO DO  */
-}
-
-#tina-2 {
-    /* TO DO  */
-}
-
-#evelyn-1 {
-    /* TO DO  */
-}
-
-#evelyn-2 {
-    /* TO DO  */
-}
-
-#josephine-1 {
-    /* TO DO  */
-}
-
-#josephine-2 {
-    /* TO DO  */
-}
-
-#leonard-1 {
-    /* TO DO  */
-}
-
-#leonard-2 {
-    /* TO DO  */
-}
-
-#andrin-1 {
-    /* TO DO  */
-}
-
-#andrin-2 {
-    /* TO DO  */
-}
-
-#carmen-1 {
-    /* TO DO  */
-}
-
-#carmen-2 {
-    /* TO DO  */
-}
-
-#stefanie-1 {
-    /* TO DO  */
-}
-
-#stefanie-2 {
-    /* TO DO  */
-}
